<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <TextView
        android:text="@string/no_network_header"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <TextView
        android:text="@string/no_network_description"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <ImageView
        android:src="@drawable/ic_signal_wifi_off_black_24dp"
        android:tint="@color/border"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:contentDescription="@string/no_network_image" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/retry_btn"
        android:drawableStart="@drawable/ic_refresh_black_24dp"
        android:paddingStart="12dp"
        android:text="@string/retry_btn"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>