<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/level_item_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/level_side_margin"
    android:layout_marginRight="@dimen/level_side_margin"
    android:layout_marginBottom="@dimen/level_bottom_margin">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1.4"
        tools:background="@color/border" />

    <TextView
        android:id="@+id/level_type"
        tools:text="Genus"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/level_item_title" />

    <TextView
        android:id="@+id/level_item_title"
        tools:text="Turtles Tortilla"
        android:textSize="26sp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/level_type" />

    <Button
        android:id="@+id/wiki_btn"
        android:drawableStart="@drawable/ic_assignment_black_24dp"
        android:paddingStart="12dp"
        app:tooltipText="@string/read_on_wikipedia"
        android:background="@drawable/button_selector"
        android:layout_width="@dimen/btn_without_text_size"
        android:layout_height="@dimen/btn_without_text_size"
        app:layout_constraintTop_toBottomOf="@id/level_item_title"
        android:layout_marginTop="@dimen/level_detailed_button_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/google_it_btn"
        android:drawableStart="@drawable/ic_language_black_24dp"
        android:paddingStart="12dp"
        app:tooltipText="@string/google_it"
        android:background="@drawable/button_selector"
        android:layout_width="@dimen/btn_without_text_size"
        android:layout_height="@dimen/btn_without_text_size"
        app:layout_constraintTop_toBottomOf="@id/level_item_title"
        android:layout_marginTop="@dimen/level_detailed_button_margin_top"
        app:layout_constraintStart_toEndOf="@id/wiki_btn"
        android:layout_marginStart="@dimen/level_detailed_button_margins" />

    <Button
        android:id="@+id/bookmark_btn"
        android:drawableStart="@drawable/ic_bookmark_black_24dp"
        android:paddingStart="12dp"
        app:tooltipText="@string/toggle_bookmark"
        android:background="@drawable/button_selector"
        android:layout_width="@dimen/btn_without_text_size"
        android:layout_height="@dimen/btn_without_text_size"
        app:layout_constraintTop_toBottomOf="@id/level_item_title"
        android:layout_marginTop="@dimen/level_detailed_button_margin_top"
        app:layout_constraintStart_toEndOf="@id/google_it_btn"
        android:layout_marginStart="@dimen/level_detailed_button_margins" />

    <Button
        android:id="@+id/share_btn"
        android:drawableStart="@drawable/ic_share_black_24dp"
        android:paddingStart="12dp"
        app:tooltipText="@string/share"
        android:background="@drawable/button_selector"
        android:layout_width="@dimen/btn_without_text_size"
        android:layout_height="@dimen/btn_without_text_size"
        app:layout_constraintTop_toBottomOf="@id/level_item_title"
        android:layout_marginTop="@dimen/level_detailed_button_margin_top"
        app:layout_constraintStart_toEndOf="@id/bookmark_btn"
        android:layout_marginStart="@dimen/level_detailed_button_margins" />

    <TextView
        android:id="@+id/item_leaves_count"
        tools:text="99999"
        android:textSize="22sp"
        android:textColor="#000000"
        app:tooltipText="@string/species_count"
        android:drawableStart="@drawable/ic_expand_more_black_24dp"
        android:paddingStart="@dimen/button_drawable_padding"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        app:layout_constraintBaseline_toBaselineOf="@id/wiki_btn"
        android:layout_marginTop="@dimen/level_detailed_button_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>